# UCAgent

./: .dockerignore  .gitignore  404.html  AGENTS.md  CCLA.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.stage-time  DualPort.cov  LICENSE  MANIFEST.in  Makefile  NOTICE.md  README.Docker.md  README.en.md  README.md  README.zh.md  SECURITY.md  config.yaml  mkdocs.yml  pandoc.mk  pyproject.toml  pytest.ini  requirements.txt  run_mcp.sh  run_test.sh  setup.py  sitemap.xml  split.py  ucagent.py  verify.py
.github/: release-notes-prompt.md
.github/workflows/: build-docker.yml  build-docs.yml  build-pandoc.yml  release-notes-ai-draft.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-2-summary.txt
.sisyphus/plans/: messages-panel-scrollview.md
DOC_PATCH_BUNDLE_WEB_MASTER/: index.html
content/00_index/: index.html
doc/Function_Coverage/: index.md
doc/Guide_Doc/: dut_api_and_env.md  dut_bug_analysis.md  dut_fixture.md  dut_fixture_and_api.md  dut_function_coverage_def.md  dut_functions_and_checks.md  dut_test_case.md  dut_test_program.md  dut_test_summary.md  dut_test_template.md
doc/Guide_doc/: dut_fixture_and_api.md  dut_function_coverage_def.md  dut_functions_and_checks.md  dut_test_case.md
docs/: DOC_PATCH_BUNDLE_WEB_MASTER.md  HEADLESS_VSCODE.md  Makefile  VSCODE_EXTENSION.md  index.md  mkdocs.yml  pandoc.mk  workflow.md
docs/content/: 00_index.md  01_introduce.md  03_workflow.md  index.md
docs/pandoc/: header.tex
docs/usage/: mcp.md  option.md
examples/ALU/: README.md
examples/ALU754/: ALU754.v  README.md  launch.yaml
examples/Adder/: Adder.v  README.md  adder.md  largest_file_analysis.txt  launch.yaml
examples/BatchRun/: Makefile  README.md
examples/CustomBackend/: README.md
examples/DockerSwarm/: README.md
examples/DualPort/: DualPort_api.py  README.md
examples/FSM/: launch.yaml
examples/Formal/: Makefile  README.md  RISCV_EU_Summit_Extended_Abstract.md  formal.yaml  need.md  requirements.txt
examples/GenSpec/: Makefile  README.md  genspec.yaml
examples/Gencov/: Makefile  README.md
examples/IncrementTest/: Makefile  README.md
examples/IntegerDivider/: README.md
examples/LLMCheck/: README.md
examples/MiniWorkflow/: Makefile  README.md  __init__.py  mini.yaml  my_checkers.py  my_tools.py
examples/MockComponents/: README.md
examples/MultiRun/: Makefile  README.md
examples/Mux/: launch.yaml
examples/ReferenceModel/: README.md
examples/Sbuffer/: README.md  Sbuffer.scala  Sbuffer_spec.md  ValidPLRUWrapper.v  filelist.txt
examples/WebAPI/: README.md
examples/python_skill/: SKILL.md
examples/template/: bug_func_and_checks.md  functions_and_checks.md
examples/uart_16550/: Makefile  README.md  filelist.txt  uart_register_file.sv  uart_tx.sv
search/: search_index.json
tests/: test_api_cmd_complete.py  test_api_master_task_logs.py  test_api_terminal_web_console.py  test_bash_script_checker.py  test_checker.py  test_cli_web_ui.py  test_cmdline_backend.py  test_config_loader.py  test_diff_ops.py  test_file_markdown_must_have_cks.py  test_fileops.py  test_fileops_performance.py  test_function.py  test_mcps.py  test_messages_panel.py  test_messages_panel_profile_repro.py  test_nohead_loop.bash  test_parser.py  test_planning.py  test_stage.py  test_stage_manager.py  test_static_bug.py  test_test.py  test_tools.py  test_ui.py  test_unity_env_and_bundle_checkers.py  test_unity_mock_checker.py  test_verify_pdb_runtime.py  test_verify_pdb_sigint.py  test_verify_pdb_web_ui.py  test_vmanager_all_completed.py  test_web_ui_session.py  test_workspace_archive.py
tests/DualPort/: dual_port_stack.md  dual_port_stack.v
tests/test_data/: dut_bug_analysis.md
ucagent/: SKILL.md  cli.py  headless_bus.py  headless_server.py  setting.yaml  verify_agent.py  verify_pdb.py  verify_ui.py  version.py
ucagent/abackend/: __init__.py  base.py  cmdline.py
ucagent/assets/: mcp_claude.json  mcp_codex.toml  mcp_copilot.json  mcp_iflow.json  mcp_kilo.json  mcp_opencode.json  mcp_qwen.json
ucagent/checkers/: __init__.py  base.py  file_linemap.py  file_markdown.py  formal.py  increment.py  static_bug.py  toffee_report.py  unity_test.py  unity_test_mock.py  unity_test_random.py
ucagent/message/: conversation.py  statistic.py
ucagent/server/: __init__.py  api_cmd.py  api_master.py  api_mcp.py  api_terminal.py  web_ui_session.py
ucagent/stage/: vmanager.py  vstage.py
ucagent/tools/: __init__.py  bash.py  expression.py  fileops.py  memory.py  skill.py  subagent.py  testops.py  uctool.py  workdiff.py
ucagent/tui/: __init__.py  app.py  body_panel.py  command_panel.py  completion.py  handlers.py  (+5 more)
unity_test/: Uart_tx_verification_needs_and_plan.md
vagent/: __init__.py  cli.py  setting.yaml  verify_agent.py  verify_pdb.py  verify_ui.py  version.py
vscode-extension/: package.json
(+544 files in other folders)
