[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "UCAgent"
version = "1.0.0"
description = "UnityChip Verification Agent - AI-powered hardware verification tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "XS-MLVP", email = "contact@xs-mlvp.org"},
]
maintainers = [
    {name = "XS-MLVP", email = "contact@xs-mlvp.org"},
]
keywords = [
    "hardware", 
    "verification", 
    "AI", 
    "agent", 
    "chip", 
    "testing",
    "EDA"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain>=0.3.25",
    "langchain_community>=0.3.24",
    "openai>=1.82.0",
    "langgraph>=0.4.7",
    "langchain_openai>=0.3.18",
    "langmem>=0.0.27",
    "urwid>=3.0.2",
    "mem0ai>=0.1.109",
    "langchain_mcp_adapters>=0.1.7",
    "pytoffee@git+https://github.com/XS-MLVP/toffee@master",
    "toffee-test@git+https://github.com/XS-MLVP/toffee-test@master",
]

[project.urls]
Homepage = "https://github.com/XS-MLVP/UCAgent"
Documentation = "https://github.com/XS-MLVP/UCAgent#readme"
Repository = "https://github.com/XS-MLVP/UCAgent"
"Bug Reports" = "https://github.com/XS-MLVP/UCAgent/issues"

[project.scripts]
ucagent = "vagent.cli:main"

[tool.setuptools]
packages = ["vagent", "vagent.config", "vagent.stage", "vagent.stage.checkers", "vagent.template", "vagent.tools", "vagent.util"]

[tool.setuptools.package-data]
"vagent" = ["config/*.yaml", "template/**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["tests*", "examples*", "output*", "doc*"]
